cmake_minimum_required(VERSION 3.9)
project(Lecture1_stack1)

set(CMAKE_CXX_STANDARD 98)

add_executable(Lecture1_stack1 main.cpp cmake-build-debug/Basic_int_stack.cpp cmake-build-debug/Basic_int_stack.h Basic_int_stack.cpp Basic_int_stack.h Basic_int_stack.cpp Basic_int_stack.h kk.cpp kk.h dd.cpp dd.h)